tests/negative/gold/abstract1_test.gold
tests/negative/abstract1_test.toit:3:10: error: Static functions can't be abstract
abstract foo
         ^~~
Compilation failed.
